WIP
-----------------------------
* [New]Widget Snapping
  - Add widget snapping and alignment (implemented by "nikidigi"), which allows to snap and align widget to other widgets or screen edges. Snapping is activated by holding down "Ctrl" key while moving widget.
  - Add "snap_distance" and "snap_gap" options in global user config, which can be accessed from "Config > Application" in main menu.
  - Add Right-Click "context menu" for each overlay widget, which enables additional options:
    Center horizontally: align widget to the center of active screen horizontally.
    Center vertically: align widget to the center of active screen vertically.

* Standings Widget
  - Renamed "show_time_gap_from_class_best" option to "show_time_gap_from_same_class", which now also shows time gap behind the same class leader in race session. This option is enabled by default, and only takes effect while `enable_multi_class_split_mode` is enabled.

* RestAPI Module
  - Add individual "minimum update interval" for each different url paths, where some url paths are updated less frequently than others to conserve resource.

* Stats Module
  - Fixed an issue that would cause incorrect best lap time saved due to network desync.

* Misc
  - Add new contributor "nikidigi" to contributors.md.

2.31.0 (2025-07-08)
-----------------------------
* Fuel Calculator
  - [New]Add "Tyre" column to history table, which lists "average tyre tread wear" data that can be used for tyre wear calculation.
  - [New]Add tyre tread wear and lifespan calculation in laps, minutes, stints, which helps to plan tyre usage for multi-stint race. See "Fuel Calculator" section in User Guide for details.
  - [New]Add "Max stint laps" & "Max stint minutes" calculation, which shows maximum laps and minutes can run per stint based on "Tank capacity" value (or 100% capacity for virtual energy).

* Consumption History
  - [New]Add "average tyre tread wear" logging via Fuel Module, which is used in Fuel Calculator.
